--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,8 @@
                 <excludes>
                     <exclude>**/model/**</exclude>
                     <exclude>**/dto/**</exclude>
+                    <exclude>**/configs/**</exclude>
+                    <exclude>**/Main.java</exclude>
                 </excludes>
                 </configuration>
                 <executions>
