--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 spring.http.multipart.max-file-size: 10MB
 spring.http.multipart.max-request-size: 10MB
+
+support.email: support@greatstart.com
