--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,4 @@ sonar.projectName=Startup_Platform
 sonar.projectVersion=1.0
 sonar.sources=src/main
 sonar.tests=src/test
+sonar.exclusions=src/main/resources/static/js/vendor/*
