--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,18 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 spring.http.multipart.max-file-size: 10MB
 spring.http.multipart.max-request-size: 10MB
 
-support.email: support@greatstart.com
+support.email: GreatStartSupport@meta.ua
 
 spring.mail.host=smtp.meta.ua
 spring.mail.port=465
-spring.mail.username=GreatStartSupport@mail.ru
+spring.mail.username=GreatStartSupport@meta.ua
 spring.mail.password=metaPassword
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.test-connection=true
