--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
 spring.jpa.hibernate.ddl-auto=none
 
+spring.messages.basename=MessagesBundle
+
 spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 spring.http.multipart.max-file-size: 10MB
