--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 security.basic.enabled=false
 spring.jpa.properties.hibernate.default_schema=startup_platform
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.messages.basename=MessagesBundle
 
