--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.mail.host=smtp.meta.ua
 spring.mail.port=465
 spring.mail.username=GS.Support@meta.ua
 spring.mail.password=metaPassword
-spring.mail.properties.mail.smtp.ssl.enable=false
-spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.test-connection=true
