--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,12 +28,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: root
-#  jpa:
-#    properties:
-#      hibernate:
-#        default_schema: startup_platform
-#    hibernate:
-#      ddl-auto: update
+  jpa:
+    hibernate:
+      ddl-auto: update
 security:
   basic:
     enabled: false
@@ -42,7 +39,6 @@ server:
 ---
 spring:
   profiles: default
-
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
