--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,9 @@ spring:
     username: postgres
     password: root
   jpa:
+    properties:
+      hibernate:
+        default_schema: startup_platform
     hibernate:
       ddl-auto: update
 security:
@@ -43,6 +46,9 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: create-drop
+    properties:
+      hibernate:
+        default_schema: startup_platform
 server:
   port: 9001
 
