--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,16 +6,17 @@ spring:
       max-file-size: 10MB
       max-request-size: 10MB
   mail:
-    host: smtp.ukr.net
-    port: 465
-    username: GreatStartSupport@ukr.net
+    host: smtp.gmail.com
+    port: 587
+    username: greatstartmail@gmail.com
     password: metaPassword
-    properties:
-      mail:
-        smptp:
-          ssl:
-            enable: true
-    test-connection: false
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
+    test-connection: true
   messages:
     basename: MessagesBundle
 support:
