--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
             <artifactId>h2</artifactId>
             <version>1.4.195</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
 
     </dependencies>
 
