--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,6 +50,14 @@ spring:
     properties:
       hibernate:
         default_schema: startup_platform
+  h2:
+    console:
+      enabled: true
+  datasource:
+    name: startup
+security:
+  enable-csrf: false
 server:
   port: 9001
+
 
