--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ support:
 spring:
   profiles: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://localhost:5432/startup_platform
     username: postgres
     password: root
   jpa:
@@ -39,7 +39,7 @@ security:
   basic:
     enabled: false
 server:
-  port: 8080
+  port: 8081
 ---
 spring:
   profiles: default
